# simple_net

./: CMakeLists.txt  README.md
examples/: test.cpp
include/: Function.h  Net.h
models/: model_sigmoid_800_200_test.xml
src/: Net.cpp  csv2xml.cpp
